--- a/style.css
+++ b/style.css
@@ -1,17 +1,27 @@
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  align-items: center;
-  text-align: center;
+.header {
+  margin: 10px;
 }
 
-h1 {
-  text-align: center;
+img {
+  margin: 10px;
+  height: 100px;
+  width: 100px;
+}
+h1,
+h5,
+h5,
+a {
+  margin: 0;
+}
+
+.info {
+  display: block;
+  text-decoration: none;
 }
 
 body {
-  background-color: aliceblue;
+  background-color: rgb(65, 65, 65);
+  color: whitesmoke;
 }
 
 table,
@@ -20,4 +30,10 @@ td {
   border: 1px solid black;
 
   border-collapse: collapse;
+}
+
+.links {
+  height: 50px;
+  width: 50px;
+  margin: 0;
 }
