--- a/style.css
+++ b/style.css
@@ -19,11 +19,6 @@ a {
   text-decoration: none;
 }
 
-body {
-  background-color: rgb(65, 65, 65);
-  color: whitesmoke;
-}
-
 table,
 th,
 td {
@@ -36,4 +31,28 @@ td {
   height: 50px;
   width: 50px;
   margin: 0;
+}
+
+@media (max-width: 480px) {
+  body {
+    background-color: rgb(79, 79, 79);
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1200px) {
+  body {
+    background-color: darkgray;
+  }
+}
+
+@media (min-width: 1201px) and (max-width: 1600px) {
+  body {
+    background-color: lightgray;
+  }
+}
+
+@media (min-width: 1601px) {
+  body {
+    background-color: white;
+  }
 }
